--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^12.2.0",
     "react-dom": "^16.12.0",
+    "react-input-range": "^1.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "react-spring": "^8.0.27",
     "react-with-gesture": "^4.0.8",
     "styled-components": "^4.4.0"
